<resources>
    <string name="app_name">GsbApp</string>
    <string name="nom_complet">Nom complet</string>
    <string name="pass">Mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="successco">CONNEXION REUSSIE</string>
    <string name="creerCompteRendu">nouveau compte rendu</string>
    <string name="creer">Créer</string>
    <string name="suivant">Suivant</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>

</resources>