<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Controlleurs.Formulaires.CompteRenduSaisieActivity"
    android:layout_gravity="center"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/saisie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creerCompteRendu"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textColor="@color/dark_theme"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_theme"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Liste des praticiens :"
            android:textColor="@color/dark_theme"
            android:textSize="18sp"
            android:textAlignment="textStart"/>

        <Spinner
            android:id="@+id/spinListPraticiens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background_custom"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choissisez la date du rendez-vous :"
                android:textColor="@color/dark_theme"
                android:textSize="18sp" />

            <DatePicker
                style="@style/MyDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarTextColor="#FFFFFF"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                android:yearListSelectorColor="#000000" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suivant"
            android:textColor="@color/white"
            android:onClick="prochaineSaisieCompteRendu"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:backgroundTint="@color/dark_theme"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/annuler"
            android:textSize="18sp"
            android:textColor="@color/dark_theme"
            android:fontFamily="sans-serif-medium"
            android:onClick="annulerSaisie"
            android:backgroundTint="@color/grey_white"/>

    </LinearLayout>

</ScrollView>