<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".Controlleurs.Formulaires.AuthentificationActivity"
    android:padding="20dp">

    <ImageView
        android:layout_width="366dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/data" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Bienvenue"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/pseudo"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:passwordToggleTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/vpn"
            android:textColorHint="@color/black"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/validerConnxeion"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#000000"
            android:layout_marginTop="40dp"
            android:onClick="seConnecter"
            android:text="@string/valider"
            android:textSize="17sp"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>