<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="center"
    android:padding="30dp"
    tools:context=".Controlleurs.SecondCompteRenduSaisieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/saisie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creerCompteRendu"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textColor="@color/dark_theme"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_theme"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Liste des motifs :"
            android:textColor="@color/dark_theme"
            android:textSize="18sp"
            android:textAlignment="textStart"/>

        <Spinner
            android:id="@+id/spinListPraticiens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background_custom"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bilan_saisie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_edit_black_24dp"
                app:hintTextColor="@color/dark_theme"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/dark_theme"
                android:textColorHint="@color/dark_theme"
                app:endIconTint="@color/dark_theme"
                app:passwordToggleTint="@color/dark_theme"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bilan de la visite"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textColor="@color/dark_theme"
                android:text="Coefficient de confiance :" />

            <Spinner
                android:id="@+id/spinListCoeffConfiance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background_custom"
                android:layout_marginTop="20dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/dark_theme"
            android:fontFamily="sans-serif-medium"
            android:onClick="confirmationSaisie"
            android:text="@string/creer"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/annulerConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/annuler"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/dark_theme"
            android:onClick="annulerSaisie"
            android:backgroundTint="@color/grey_white"/>

    </LinearLayout>

</ScrollView>